fix: banner z-index 수정

--- a/src/components/shared/carousel/Banner.scss
+++ b/src/components/shared/carousel/Banner.scss
@@ -1,10 +1,33 @@
 /* stylelint-disable selector-class-pattern */
-.banner-slide {
-  .slick-slide {
-    a {
-      position: relative;
-      aspect-ratio: 375 / 284;
-      vertical-align: top;
+.container {
+  position: relative;
+  z-index: 3;
+
+  .banner-slide {
+    .slick-slide {
+      a {
+        position: relative;
+        aspect-ratio: 375 / 284;
+        vertical-align: top;
+      }
+    }
+  }
+
+  .banner-rect {
+    position: absolute;
+    top: 90%;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    border-radius: 24px 24px 0 0;
+    background-color: #fff;
+
+    @media screen and (1000px >= width >= 600px) {
+      height: 80px;
+    }
+
+    @media screen and (width >= 1001px) {
+      height: 120px;
     }
   }
 }
