--- a/src/components/shared/header/Header.module.scss
+++ b/src/components/shared/header/Header.module.scss
@@ -7,7 +7,7 @@ $white: var(--white);
     box-sizing: border-box;
     width: 100%;
     height: 44px;
-    padding: 0 16px;
+    padding: 0 24px;
     background-color: $white;
 
     &.transparent {
